feat(dashboard): add dashboard + icon

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,130 @@
-<p>
-  dashboard works!
-</p>
+<div class="container-fluid g-bg-c--gray2 ">
+  <div class="row g-vh--100 ">
+    <div class="d-flex w-100">
+      <aside class="g-vh--100 w-100 g-nav-aside g-bg-c--blue">
+        <ul class="g-nav-menu mt-5">
+          <li class="g-nav-menu--item active" mat-raised-button>
+            <span class="icon-home g-f--25 g-c--white"></span>
+          </li>
+          <li class="g-nav-menu--item">
+            <span class="icon-favorite g-f--25 g-c--white"></span>
+          </li>
+          <li class="g-nav-menu--item">
+            <span class="icon-notify g-f--25 g-c--white"></span>
+          </li>
+          <li class="g-nav-menu--item">
+            <span class="icon-folder g-f--25 g-c--white"></span>
+          </li>
+          <li class="g-nav-menu--item">
+            <span class="icon-user g-f--25 g-c--white"></span>
+          </li>
+        </ul>
+      </aside>
+      <section class="w-100 mt-5">
+        <div class="container mx-auto">
+          <div class="d-flex align-items-center">
+            <div class="pr-3">
+              <img src="../../assets/img/woman.svg" alt="">
+            </div>
+            <div class="w-100">
+              <h3 class="g-f--50 g-f--xbold g-c--black">New Sale</h3>
+              <hr class="g-hr-big w-100 g-line--1">
+            </div>
+          </div>
+
+          <div class="ml-3 mt-4">
+            <h2 class="g-c--black g-f--30 g-f--bold">Document</h2>
+            <hr>
+
+            <div class="d-flex">
+              <div class="flex-fill mr-md-4">
+                <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Client</h4>
+                <div class="d-flex ">
+                  <input type="text" class="g-input w-100">
+                  <button mat-button class="g-btn g-btn--blue ml-2">
+                    <i class="material-icons">
+                      add
+                    </i>
+                  </button>
+                </div>
+
+              </div>
+              <div class="flex-fill mr-md-4">
+                <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Branch oﬃce</h4>
+                <input type="text" class="g-input w-100">
+              </div>
+              <div class="">
+                <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Currency</h4>
+                <input type="text" class="g-input w-100">
+              </div>
+            </div>
+          </div>
+
+          <div class="ml-3 mt-4">
+            <h2 class="g-c--black g-f--30 g-f--bold">Details</h2>
+            <hr>
+
+            <div class="d-flex">
+              <div class="w-50 mr-md-4">
+                <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Name</h4>
+                <div class="d-flex ">
+                  <input type="text" class="g-input w-100">
+                </div>
+
+              </div>
+              <div class="flex-fill mr-md-4">
+                <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Quantity</h4>
+                <input type="text" class="g-input w-100">
+              </div>
+              <div class="flex-fill mr-md-4">
+                <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Price</h4>
+                <input type="text" class="g-input w-100">
+              </div>
+              <div class="flex-fill">
+                <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Subtotal</h4>
+                <input type="text" class="g-input w-100">
+              </div>
+              <div class="">
+                <h4 class="g-f--18 g-c--gray g-f--bold mb-2">&nbsp;</h4>
+                <button mat-button class="g-btn g-btn--blue ml-2">
+                  <i class="material-icons">
+                    clear
+                  </i>
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <div class="ml-3 mt-4">
+            <button mat-button class="g-btn g-btn--blue g-btn--big px-4">
+              ADD
+            </button>
+            <div class="d-flex">
+              <div class="w-md-25 ml-auto d-flex align-items-center">
+                <div class="g-f--18 g-c--gray g-f--bold ">
+                  Total
+                </div>
+                <div type="text" class="g-bg-c--white p-3 w-100 ml-2 align-middle">
+                  000.000.000,00
+                </div>
+              </div>
+
+            </div>
+          </div>
+          <div class="ml-3 mt-4">
+            <hr>
+            <div class="text-right">
+              <button mat-button class="g-btn g-btn--blue g-uppercase g-btn--big px-4">
+                save
+              </button>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+    </div>
+
+
+  </div>
+</div>
