--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,7 +6,9 @@ $break-xlarge: 1609px;
 $colors: (
   black: #192843,
   blue: #279AFF,
+  blue2: #147CC9,
   gray: #99A4B6,
   gray2: #ECF4FF,
+  gray3: #CEDDED,
   white: #fff
 )
