--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -3,5 +3,6 @@
 @import './mixins';
 @import './buttons';
 @import './general';
+@import './iconfont';
 
 body { margin: 0; font-family: 'Open Sans', sans-serif; }
