feat(dashboard): update project

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -68,7 +68,7 @@
               <div class=" mb-2 mb-md-0">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Currency</h4>
                 <div type="text" class="g-bg-c--white g-input w-100 d-flex align-items-center">
-                  $
+                  {{currencie}}
                 </div>
 
               </div>
