feat(dashboard): WIP detail + modal

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
                 nemo id iure iste rerum eum tempora molestias impedit eos quas!.
               </p>
 
-              <button mat-raised-button class="mt-5 g-btn g-btn--blue g-btn--big px-5 py-2">login</button>
+              <button mat-raised-button class="mt-5 g-btn g-btn--blue g-btn--big px-5 py-2" [routerLink]="['/dashboard']">login</button>
             </div>
 
           </div>
