--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -43,7 +43,7 @@
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Client</h4>
                 <div class="d-flex">
                   <mat-form-field class="w-100 ">
-                    <mat-select class="g-input">
+                    <mat-select class="g-input" [(ngModel)]="user">
                       <mat-option>None</mat-option>
                       <mat-option *ngFor="let user of users" [value]="user">{{user.name}}</mat-option>
                     </mat-select>
@@ -59,7 +59,7 @@
               <div class="flex-fill mr-md-4 mb-2 mb-md-0">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Branch office</h4>
                 <mat-form-field class="w-100">
-                  <mat-select class="g-input" [(ngModel)]="office" (selectionChange)="onOfficeChance(office)" >
+                  <mat-select class="g-input" [(ngModel)]="office" (selectionChange)="onOfficeChance(office)">
                     <mat-option>None</mat-option>
                     <mat-option *ngFor="let office of offices" [value]="office">{{office.name}}</mat-option>
                   </mat-select>
@@ -82,22 +82,29 @@
             <div class="d-flex flex-column flex-md-row">
               <div class="w-50 mr-md-4 mb-2 mb-md-0">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Name</h4>
-                <div class="d-flex ">
-                  <input type="text" class="g-input w-100">
+                <div type="text" class="g-bg-c--white g-input w-100 d-flex align-items-center">
+                  name
                 </div>
 
               </div>
               <div class="flex-fill mr-md-4  mb-2 mb-md-0">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Quantity</h4>
-                <input type="text" class="g-input w-100">
+                <mat-form-field class="g-input">
+                  <input matInput type="number">
+                </mat-form-field>
               </div>
               <div class="flex-fill mr-md-4 mb-2 mb-md-0">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Price</h4>
-                <input type="text" class="g-input w-100">
+                <div type="text" class="g-bg-c--white g-input w-100 d-flex align-items-center">
+                  33
+                </div>
+
               </div>
               <div class="flex-fill">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Subtotal</h4>
-                <input type="text" class="g-input w-100">
+                <div type="text" class="g-bg-c--white g-input w-100 d-flex align-items-center">
+                  22222
+                </div>
               </div>
               <div class="order-0 order-md-last">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">&nbsp;</h4>
@@ -111,7 +118,7 @@
           </div>
 
           <div class="ml-md-3 mt-4">
-            <button mat-button class="g-btn g-btn--blue g-btn--big px-4">
+            <button mat-button class="g-btn g-btn--blue g-btn--big px-4" (click)="openDialog()">
               ADD
             </button>
             <div class="d-flex flex-column flex-md-row">
