--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -79,31 +79,31 @@
             <h2 class="g-c--black g-f--30 g-f--bold">Details</h2>
             <hr>
 
-            <div class="d-flex flex-column flex-md-row">
+            <div class="d-flex flex-column flex-md-row mb-3" *ngFor="let detail of products">
               <div class="w-50 mr-md-4 mb-2 mb-md-0">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Name</h4>
                 <div type="text" class="g-bg-c--white g-input w-100 d-flex align-items-center">
-                  name
+                  {{ detail.Title }}
                 </div>
 
               </div>
               <div class="flex-fill mr-md-4  mb-2 mb-md-0">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Quantity</h4>
                 <mat-form-field class="g-input">
-                  <input matInput type="number">
+                  <input matInput type="number" value="{{ detail.quantity }}">
                 </mat-form-field>
               </div>
               <div class="flex-fill mr-md-4 mb-2 mb-md-0">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Price</h4>
                 <div type="text" class="g-bg-c--white g-input w-100 d-flex align-items-center">
-                  33
+                  {{ detail.price }}
                 </div>
 
               </div>
               <div class="flex-fill">
                 <h4 class="g-f--18 g-c--gray g-f--bold mb-2">Subtotal</h4>
                 <div type="text" class="g-bg-c--white g-input w-100 d-flex align-items-center">
-                  22222
+                  {{ detail.subtotal}}
                 </div>
               </div>
               <div class="order-0 order-md-last">
