--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -62,7 +62,7 @@
                   <mat-form-field class="w-100">
                     <mat-select class="g-input" [(ngModel)]="office" name="office"  (selectionChange)="onOfficeChance(office)">
                       <mat-option>None</mat-option>
-                      <mat-option *ngFor="let office of offices" [value]="office">{{office.name}}</mat-option>
+                      <mat-option *ngFor="let office of offices" [value]="office.name">{{office.name}}</mat-option>
                     </mat-select>
                   </mat-form-field>
                 </div>
